# example-servant-elm-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  example-servant-elm.cabal  nixpkgs.nix  package-lock.json  package.json  package.yaml  shell.nix
assets/: BUILD.bazel  index.htm
client/: BUILD.bazel  GenerateElm.hs
client/src/: Main.elm
server/src/: App.hs
server/test/: AppSpec.hs  Spec.hs
